syntax = "proto3";

package proto;

service Token {
	rpc GetInviteToken(GetInviteTokenReq) returns (GetInviteTokenRsp) {};
    rpc VerifyInviteToken(VerifyInviteTokenReq) returns (VerifyInviteTokenRsp) {};
    rpc GetAuthToken(GetAuthTokenReq) returns (GetAuthTokenRsp) {};
    rpc VerifyAuthToken(VerifyAuthTokenReq) returns (VerifyAuthTokenRsp) {};
    rpc CancelToken(CancelTokenReq) returns (CancelTokenRsp) {};
}

enum Status {
    Empty = 0;
    OK = 1;
    TokenRefreshed = 2;
    TokenInvalid = 3;
    TokenExpired = 4;
    TokenCanceled = 5;
}

message InviteClaims {
    string email = 1;
}
message GetInviteTokenReq {
    InviteClaims claims = 1;
}

message GetInviteTokenRsp {
    string token = 2;
}

message VerifyInviteTokenReq {
    string token = 1;
}

message VerifyInviteTokenRsp {
    Status status =1;
    InviteClaims claims = 2;
}

message AuthClaims {
    int64 user_id = 1;
    string email = 2;
    string mobile = 3;
    string nickname = 4;
    string image_url = 5;
}

message GetAuthTokenReq {
    AuthClaims claims = 1;
}

message GetAuthTokenRsp {
    string token = 1;
}

message VerifyAuthTokenReq {
    string token = 1;
}

message VerifyAuthTokenRsp {
    Status status = 1;
    AuthClaims claims = 2;
    string fresh_token = 3;
}

message CancelTokenReq {
    string token = 1;
}

message CancelTokenRsp {
    Status status = 1;
}

