syntax = "proto3";

package proto;

service User {
	rpc Invite(InviteReq) returns (InviteRsp) {};
    rpc Register(RegisterReq) returns (RegisterRsp) {};
    rpc Login(LoginReq) returns (LoginRsp) {};
    rpc Logout(LogoutReq) returns (LogoutRsp) {};
}

enum Status {
    Empty = 0;
    OK = 200;
    ParamInvalid = 300;
    EmailInvalid = 301;
    EmailRegistered = 302;
    EmailSendFailed = 303;
    UserNotExist = 401;
    PasswordWrong = 402;
}

message InviteReq {
    string email = 1;
}

message InviteRsp {
    Status status = 1;
    string invite_token = 2;
}

message RegisterReq {
    string email = 1;
    string password = 2;
    string mobile = 4;
    string nickname = 5;
    string image_url = 6;
}

message RegisterRsp {
    Status status = 1;
    int64 user_id = 2;
}

message LoginReq {
    string email = 1;
    string password = 2;
}

message LoginRsp {
    Status status = 1;
    string auth_token = 2;
}

message LogoutReq {
    string auth_token = 1;
}

message LogoutRsp {
    Status status = 1;
}